Flag and flag collission implemented. Currently damages mario, just to demonstrate collision.

--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -73,6 +73,7 @@
     <Compile Include="BlockObjects\BrickStates\Hidden.cs" />
     <Compile Include="BlockObjects\BrickStates\Normal.cs" />
     <Compile Include="BlockObjects\BrickStates\Used.cs" />
+    <Compile Include="BlockObjects\Flag.cs" />
     <Compile Include="BlockObjects\Floor.cs" />
     <Compile Include="BlockObjects\Pipeline.cs" />
     <Compile Include="BlockObjects\Question.cs" />
