--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -177,6 +177,7 @@
     <Compile Include="MarioObjects\ProtectionStates\Protected.cs" />
     <Compile Include="MarioObjects\ProtectionStates\Starred.cs" />
     <Compile Include="Sounds\SoundController.cs" />
+    <Compile Include="Sprites\TextSprite.cs" />
     <Compile Include="Sprites\CompressedSprite.cs" />
     <Compile Include="Sprites\FlashingAnimatedSprite.cs" />
     <Compile Include="Sprites\FlickingAnimatedSprite.cs" />
