--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Game1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Theming\GameTimer.cs" />
     <Compile Include="Theming\Listener.cs" />
   </ItemGroup>
   <ItemGroup>
