--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -166,6 +166,7 @@
     <Compile Include="LevelGen\GameEntityConverter.cs" />
     <Compile Include="LevelGen\Util.cs" />
     <Compile Include="MarioObjects\Fire.cs" />
+    <Compile Include="MarioObjects\DollMario.cs" />
     <Compile Include="MiscObjects\Background.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
