--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -192,6 +192,7 @@
     <Compile Include="MarioObjects\ProtectionStates\Protected.cs" />
     <Compile Include="MarioObjects\ProtectionStates\Starred.cs" />
     <Compile Include="Sounds\SoundController.cs" />
+    <Compile Include="SplashObjects\PopingUpPoints.cs" />
     <Compile Include="Sprites\SplashSprite.cs" />
     <Compile Include="Sprites\TextSprite.cs" />
     <Compile Include="Sprites\FlashingAnimatedSprite.cs" />
