--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -252,6 +252,16 @@
     <Content Include="Content\GreenKoopaLeft.png" />
     <Content Include="Content\GreenKoopaRight.png" />
     <Content Include="Content\GreenKoopaStepped.png" />
+    <Content Include="Content\marioTitle.png" />
+    <Content Include="Content\Music\01-main-theme-overworld.mp3" />
+    <Content Include="Content\Music\02-underworld.mp3" />
+    <Content Include="Content\Music\05-starman.mp3" />
+    <Content Include="Content\Music\06-level-complete.mp3" />
+    <Content Include="Content\Music\08-you-re-dead.mp3" />
+    <Content Include="Content\Music\09-game-over.mp3" />
+    <Content Include="Content\Music\12-ending.mp3" />
+    <Content Include="Content\Music\14-hurry-underground-.mp3" />
+    <Content Include="Content\Music\18-hurry-overworld-.mp3" />
     <Content Include="Content\OneUpMushroom.png" />
     <Content Include="Content\BlockSheet.png" />
     <Content Include="Content\Coin.png" />
@@ -272,6 +282,26 @@
     <Content Include="Content\RedKoopaLeft.png" />
     <Content Include="Content\RedKoopaRight.png" />
     <Content Include="Content\RedKoopaStepped.png" />
+    <Content Include="Content\SFX\marioTitle.png" />
+    <Content Include="Content\SFX\smb_1-up.wav" />
+    <Content Include="Content\SFX\smb_breakblock.wav" />
+    <Content Include="Content\SFX\smb_bump.wav" />
+    <Content Include="Content\SFX\smb_coin.wav" />
+    <Content Include="Content\SFX\smb_fireball.wav" />
+    <Content Include="Content\SFX\smb_fireworks.wav" />
+    <Content Include="Content\SFX\smb_flagpole.wav" />
+    <Content Include="Content\SFX\smb_jump-super.wav" />
+    <Content Include="Content\SFX\smb_jumpsmall.wav" />
+    <Content Include="Content\SFX\smb_kick.wav" />
+    <Content Include="Content\SFX\smb_mariodie.wav" />
+    <Content Include="Content\SFX\smb_pause.wav" />
+    <Content Include="Content\SFX\smb_pipe.wav" />
+    <Content Include="Content\SFX\smb_powerup.wav" />
+    <Content Include="Content\SFX\smb_powerup_appears.wav" />
+    <Content Include="Content\SFX\smb_stage_clear.wav" />
+    <Content Include="Content\SFX\smb_stomp.wav" />
+    <Content Include="Content\SFX\smb_vine.wav" />
+    <Content Include="Content\SFX\smb_world_clear.wav" />
     <Content Include="Content\StandardJumpingLeft.png" />
     <Content Include="Content\StandardJumpingRight.png" />
     <Content Include="Content\StandardStandingLeft.png" />
@@ -288,6 +318,8 @@
     <Content Include="Content\SuperStandingRight.png" />
     <Content Include="Content\SuperWalkingLeft.png" />
     <Content Include="Content\SuperWalkingRight.png" />
+    <Content Include="FakesAssemblies\SharpDX.Direct2D1.3.1.1.0.Fakes.dll" />
+    <Content Include="FakesAssemblies\SharpDX.Direct2D1.3.1.1.0.Fakes.xml" />
     <Content Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -301,6 +333,8 @@
     <None Include="Content\ExampleLevel.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="FakesAssemblies\SharpDX.Direct2D1.3.1.1.0.Fakes.fakesconfig" />
+    <None Include="FakesAssemblies\SharpDX.Direct2D1.3.1.1.0.Fakes.messages" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -316,7 +350,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="GameOverScreen\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
