--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -243,6 +243,16 @@
     <Content Include="Content\GreenKoopaLeft.png" />
     <Content Include="Content\GreenKoopaRight.png" />
     <Content Include="Content\GreenKoopaStepped.png" />
+    <Content Include="Content\marioTitle.png" />
+    <Content Include="Content\Music\01-main-theme-overworld.mp3" />
+    <Content Include="Content\Music\02-underworld.mp3" />
+    <Content Include="Content\Music\05-starman.mp3" />
+    <Content Include="Content\Music\06-level-complete.mp3" />
+    <Content Include="Content\Music\08-you-re-dead.mp3" />
+    <Content Include="Content\Music\09-game-over.mp3" />
+    <Content Include="Content\Music\12-ending.mp3" />
+    <Content Include="Content\Music\14-hurry-underground-.mp3" />
+    <Content Include="Content\Music\18-hurry-overworld-.mp3" />
     <Content Include="Content\OneUpMushroom.png" />
     <Content Include="Content\BlockSheet.png" />
     <Content Include="Content\Coin.png" />
@@ -263,6 +273,25 @@
     <Content Include="Content\RedKoopaLeft.png" />
     <Content Include="Content\RedKoopaRight.png" />
     <Content Include="Content\RedKoopaStepped.png" />
+    <Content Include="Content\SFX\smb_1.mp3" />
+    <Content Include="Content\SFX\smb_breakblock.mp3" />
+    <Content Include="Content\SFX\smb_bump.mp3" />
+    <Content Include="Content\SFX\smb_coin.mp3" />
+    <Content Include="Content\SFX\smb_fireball.mp3" />
+    <Content Include="Content\SFX\smb_fireworks.mp3" />
+    <Content Include="Content\SFX\smb_flagpole.mp3" />
+    <Content Include="Content\SFX\smb_jump.mp3" />
+    <Content Include="Content\SFX\smb_jumpsmall.mp3" />
+    <Content Include="Content\SFX\smb_kick.mp3" />
+    <Content Include="Content\SFX\smb_mariodie.mp3" />
+    <Content Include="Content\SFX\smb_pause.mp3" />
+    <Content Include="Content\SFX\smb_pipe.mp3" />
+    <Content Include="Content\SFX\smb_powerup.mp3" />
+    <Content Include="Content\SFX\smb_powerup_appears.mp3" />
+    <Content Include="Content\SFX\smb_stage_clear.mp3" />
+    <Content Include="Content\SFX\smb_stomp.mp3" />
+    <Content Include="Content\SFX\smb_vine.mp3" />
+    <Content Include="Content\SFX\smb_world_clear.mp3" />
     <Content Include="Content\StandardJumpingLeft.png" />
     <Content Include="Content\StandardJumpingRight.png" />
     <Content Include="Content\StandardStandingLeft.png" />
