--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -273,7 +273,7 @@
     <Content Include="Content\RedKoopaLeft.png" />
     <Content Include="Content\RedKoopaRight.png" />
     <Content Include="Content\RedKoopaStepped.png" />
-    <Content Include="Content\SFX\smb_1-up.mp3" />
+    <Content Include="Content\SFX\smb_1.mp3" />
     <Content Include="Content\SFX\smb_breakblock.mp3" />
     <Content Include="Content\SFX\smb_bump.mp3" />
     <Content Include="Content\SFX\smb_coin.mp3" />
@@ -281,7 +281,7 @@
     <Content Include="Content\SFX\smb_fireworks.mp3" />
     <Content Include="Content\SFX\smb_flagpole.mp3" />
     <Content Include="Content\SFX\smb_jump-super.mp3" />
-    <Content Include="Content\SFX\smb_jumpsmall.mp3" />
+    <Content Include="Content\SFX\smb_jump.mp3" />
     <Content Include="Content\SFX\smb_kick.mp3" />
     <Content Include="Content\SFX\smb_mariodie.mp3" />
     <Content Include="Content\SFX\smb_pause.mp3" />
