--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -273,25 +273,25 @@
     <Content Include="Content\RedKoopaLeft.png" />
     <Content Include="Content\RedKoopaRight.png" />
     <Content Include="Content\RedKoopaStepped.png" />
-    <Content Include="Content\SFX\smb_1.mp3" />
-    <Content Include="Content\SFX\smb_breakblock.mp3" />
-    <Content Include="Content\SFX\smb_bump.mp3" />
-    <Content Include="Content\SFX\smb_coin.mp3" />
-    <Content Include="Content\SFX\smb_fireball.mp3" />
-    <Content Include="Content\SFX\smb_fireworks.mp3" />
-    <Content Include="Content\SFX\smb_flagpole.mp3" />
-    <Content Include="Content\SFX\smb_jump.mp3" />
-    <Content Include="Content\SFX\smb_jumpsmall.mp3" />
-    <Content Include="Content\SFX\smb_kick.mp3" />
-    <Content Include="Content\SFX\smb_mariodie.mp3" />
-    <Content Include="Content\SFX\smb_pause.mp3" />
-    <Content Include="Content\SFX\smb_pipe.mp3" />
-    <Content Include="Content\SFX\smb_powerup.mp3" />
-    <Content Include="Content\SFX\smb_powerup_appears.mp3" />
-    <Content Include="Content\SFX\smb_stage_clear.mp3" />
-    <Content Include="Content\SFX\smb_stomp.mp3" />
-    <Content Include="Content\SFX\smb_vine.mp3" />
-    <Content Include="Content\SFX\smb_world_clear.mp3" />
+    <Content Include="Content\SFX\smb_1.wav" />
+    <Content Include="Content\SFX\smb_breakblock.wav" />
+    <Content Include="Content\SFX\smb_bump.wav" />
+    <Content Include="Content\SFX\smb_coin.wav" />
+    <Content Include="Content\SFX\smb_fireball.wav" />
+    <Content Include="Content\SFX\smb_fireworks.wav" />
+    <Content Include="Content\SFX\smb_flagpole.wav" />
+    <Content Include="Content\SFX\smb_jump.wav" />
+    <Content Include="Content\SFX\smb_jumpsmall.wav" />
+    <Content Include="Content\SFX\smb_kick.wav" />
+    <Content Include="Content\SFX\smb_mariodie.wav" />
+    <Content Include="Content\SFX\smb_pause.wav" />
+    <Content Include="Content\SFX\smb_pipe.wav" />
+    <Content Include="Content\SFX\smb_powerup.wav" />
+    <Content Include="Content\SFX\smb_powerup_appears.wav" />
+    <Content Include="Content\SFX\smb_stage_clear.wav" />
+    <Content Include="Content\SFX\smb_stomp.wav" />
+    <Content Include="Content\SFX\smb_vine.wav" />
+    <Content Include="Content\SFX\smb_world_clear.wav" />
     <Content Include="Content\StandardJumpingLeft.png" />
     <Content Include="Content\StandardJumpingRight.png" />
     <Content Include="Content\StandardStandingLeft.png" />
