--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -132,7 +132,7 @@
     <Compile Include="EnemyObjects\GoombaStates\Defeated.cs" />
     <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
     <Compile Include="SplashObjects\GameWon.cs" />
-    <Compile Include="SplashObjects\StartScreen.cs" />
+    <Compile Include="SplashObjects\GameStart.cs" />
     <Compile Include="SplashObjects\GameOver.cs" />
     <Compile Include="Interfaces\Containers\IContainer.cs" />
     <Compile Include="Interfaces\Containers\IGameSession.cs" />
