--- a/MelloMarioExperimental/MelloMario/MelloMarioExperimental.csproj
+++ b/MelloMarioExperimental/MelloMario/MelloMarioExperimental.csproj
@@ -149,7 +149,6 @@
     <Compile Include="BaseClasses\BaseController.cs" />
     <Compile Include="Commands\SuperCreate.cs" />
     <Compile Include="Commands\ToggleFullScreen.cs" />
-    <Compile Include="Containers\GameSession.cs" />
     <Compile Include="Containers\GameWorld2.cs" />
     <Compile Include="Controllers\KeyboardController.cs" />
     <Compile Include="EnemyObjects\KoopaStates\MovingShell.cs" />
@@ -166,6 +165,7 @@
     <Compile Include="EnemyObjects\Goomba.cs" />
     <Compile Include="EnemyObjects\GoombaStates\Defeated.cs" />
     <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
+    <Compile Include="MiscObjects\Camera.cs" />
     <Compile Include="UIObjects\GameWon.cs" />
     <Compile Include="UIObjects\GameStart.cs" />
     <Compile Include="UIObjects\GameOver.cs" />
