--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -140,6 +140,7 @@
     <Compile Include="EnemyObjects\GoombaStates\Defeated.cs" />
     <Compile Include="EnemyObjects\GoombaStates\Normal.cs" />
     <Compile Include="Interfaces\IGameCamera.cs" />
+    <Compile Include="MiscObjects\GameCamera.cs" />
     <Compile Include="Theming\Player.cs" />
     <Compile Include="UIObjects\GameWon.cs" />
     <Compile Include="UIObjects\GameStart.cs" />
