--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Interfaces\ICamera.cs" />
     <Compile Include="Interfaces\IListener.cs" />
     <Compile Include="Interfaces\Objects\IObject.cs" />
+    <Compile Include="LevelGen\InfiniteGenerator.cs" />
     <Compile Include="MiscObjects\Camera.cs" />
     <Compile Include="Theming\Player.cs" />
     <Compile Include="UIObjects\GameWon.cs" />
