--- a/MelloMario/MelloMario/MelloMario.csproj
+++ b/MelloMario/MelloMario/MelloMario.csproj
@@ -123,7 +123,7 @@
     <Compile Include="BaseClasses\BaseController.cs" />
     <Compile Include="Commands\SuperCreate.cs" />
     <Compile Include="Commands\ToggleFullScreen.cs" />
-    <Compile Include="Containers\GameSession.cs" />
+    <Compile Include="Containers\Session.cs" />
     <Compile Include="Controllers\KeyboardController.cs" />
     <Compile Include="EnemyObjects\KoopaStates\MovingShell.cs" />
     <Compile Include="EnemyObjects\Piranha.cs" />
@@ -229,10 +229,10 @@
     <Compile Include="MarioObjects\PowerUpStates\Super.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\StaticSprite.cs" />
-    <Compile Include="Theming\GameConst.cs" />
-    <Compile Include="Theming\GameDatabase.cs" />
-    <Compile Include="Theming\GameModel.cs" />
-    <Compile Include="Containers\GameWorld.cs" />
+    <Compile Include="Theming\Const.cs" />
+    <Compile Include="Theming\Database.cs" />
+    <Compile Include="Theming\Model.cs" />
+    <Compile Include="Containers\World.cs" />
     <Compile Include="Scripts\PlayingScript.cs" />
     <Compile Include="Interfaces\ICommand.cs" />
     <Compile Include="Controllers\GamePadController.cs" />
